--- a/package.json
+++ b/package.json
@@ -1,61 +1,95 @@
 {
-  "name": "new-project",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.12.8",
-    "axios": "^1.5.0",
-    "classnames": "^2.3.2",
-    "framer-motion": "^10.16.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.2",
-    "react-icon": "^1.0.0",
-    "react-icons": "^4.11.0",
-    "react-owl-carousel": "^2.3.3",
-    "react-redux": "^8.1.2",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.1",
-    "sass": "^1.67.0",
-    "swiper": "^10.3.1",
-    "toastr": "^2.1.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@reduxjs/toolkit": "^1.9.7",
-    "i18next": "^23.5.1",
-    "prop-types": "^15.8.1",
-    "tailwindcss": "^3.3.5"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"description": "Malaka oshirish",
+	"author": "Murod",
+	"dependencies": {
+		"@babel/runtime": "^7.24.7",
+		"@react-leaflet/core": "^1.1.1",
+		"@testing-library/jest-dom": "^5.16.3",
+		"@testing-library/react": "^12.1.4",
+		"@testing-library/user-event": "^13.5.0",
+		"apexcharts": "^3.35.0",
+		"assert": "^2.0.0",
+		"axios": "^0.26.1",
+		"buffer": "^6.0.3",
+		"chart.js": "^2.9.3",
+		"chartjs-plugin-datalabels": "^2.0.0",
+		"chartjs-plugin-labels": "^1.1.0",
+		"classnames": "^2.3.1",
+		"formik": "^2.2.9",
+		"history": "^5.3.0",
+		"i18next": "^21.6.14",
+		"i18next-xhr-backend": "^3.2.2",
+		"js-query-builder": "^0.2.1",
+		"leaflet": "^1.7.1",
+		"leaflet.markercluster": "^1.5.3",
+		"light-toast": "^0.3.5",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.2",
+		"normalizr": "^3.6.2",
+		"object-to-formdata": "^4.4.2",
+		"qs": "^6.10.3",
+		"query-string": "^7.1.1",
+		"rc-slider": "^10.0.0-alpha.6",
+		"react": "^18.0.0",
+		"react-apexcharts": "^1.4.0",
+		"react-chartjs-2": "^2.10.0",
+		"react-countdown": "^2.3.2",
+		"react-dom": "^18.0.0",
+		"react-dropzone": "^12.0.4",
+		"react-google-recaptcha": "^2.1.0",
+		"react-html-parser": "^2.0.2",
+		"react-i18next": "^11.16.2",
+		"react-icons": "^5.2.1",
+		"react-input-mask": "^2.0.4",
+		"react-leaflet": "^3.2.5",
+		"react-leaflet-markercluster": "^3.0.0-rc1",
+		"react-redux": "^7.2.8",
+		"react-responsive": "^10.0.0",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.1",
+		"react-select": "^5.2.2",
+		"react-select-async-paginate": "^0.6.1",
+		"react-transition-group": "^4.4.2",
+		"react-visibility-sensor": "^5.1.1",
+		"react-yandex-maps": "^4.6.0",
+		"recompose": "^0.30.0",
+		"redux": "^4.1.2",
+		"redux-saga": "^1.1.3",
+		"redux-saga-routines": "^3.2.3",
+		"reselect": "^4.1.5",
+		"swiper": "^11.1.4",
+		"use-debounce": "^7.0.1",
+		"web-vitals": "^2.1.4",
+		"yup": "^0.32.11"
+	},
+	"scripts": {
+		"start": "cross-env NODE_ENV=development react-scripts start",
+		"build": "cross-env NODE_ENV=production react-scripts build",
+		"build-development": "cp ./.env.development .env && cross-env NODE_ENV=development CI=false react-scripts build",
+		"build-production": "cp ./.env.production .env && cross-env NODE_ENV=production CI=false react-scripts build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+		"cross-env": "^7.0.3",
+		"prop-types": "^15.8.1",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-logger": "^3.0.6",
+		"require-context.macro": "^1.2.2",
+		"sass": "^1.49.11"
+	}
 }
