--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
 		"formik": "^2.2.9",
 		"history": "^5.3.0",
 		"i18next": "^21.6.14",
-
 		"light-toast": "^0.3.5",
-
 		"react": "^18.0.0",
 		"react-apexcharts": "^1.4.0",
 		"react-chartjs-2": "^2.10.0",
@@ -39,6 +37,7 @@
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"react-select": "^5.2.2",
+		"react-toastify": "^10.0.5",
 		"redux": "^4.1.2",
 		"redux-saga": "^1.1.3",
 		"redux-saga-routines": "^3.2.3",
