--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
 	"description": "Malaka oshirish",
 	"author": "Murod",
 	"dependencies": {
+		"@ant-design/icons": "^5.5.1",
 		"@babel/runtime": "^7.24.7",
+		"@emotion/styled": "^11.13.0",
+		"@mui/icons-material": "^6.1.4",
+		"@mui/material": "^6.1.3",
 		"@react-leaflet/core": "^1.1.1",
 		"@react-pdf-viewer/core": "^3.12.0",
 		"@react-pdf-viewer/pdfjs-dist-signature": "^2.7.570",
 		"@reduxjs/toolkit": "^2.2.6",
+		"antd": "^5.21.4",
 		"assert": "^2.0.0",
 		"axios": "^0.26.1",
 		"buffer": "^6.0.3",
@@ -31,6 +36,7 @@
 		"react-html-parser": "^2.0.2",
 		"react-i18next": "^11.16.2",
 		"react-icons": "^5.2.1",
+		"react-paginate": "^8.2.0",
 		"react-redux": "^7.2.8",
 		"react-responsive": "^10.0.0",
 		"react-router": "^6.3.0",
